--- a/app/frontend/tsconfig.json
+++ b/app/frontend/tsconfig.json
@@ -5,6 +5,6 @@
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"jsx": "react-jsx",
 		"outDir": "./dist",
-		"rootDir": ".",
+		"rootDir": "."
 	}
 }
