Containerize application, rewrite frontend fetching logic
Signed-off-by: zilosz <mfecko@purdue.edu>

--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -4,8 +4,7 @@
     "composite": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
-  },
-  "include": ["src/**/*.ts"]
+    "outDir": "dist",
+    "rootDir": "src"
+  }
 }
