--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "backend": "pnpm --filter @project/backend",
     "shared": "pnpm --filter @project/shared",
     "frontend": "pnpm --filter @project/frontend",
-    "dev": "pnpm --recursive --stream --parallel run dev"
+    "dev": "pnpm --recursive --stream --parallel run dev",
+    "build": "pnpm --recursive run build"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
