--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -2,25 +2,29 @@
   "name": "@project/backend",
   "private": true,
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "type": "module",
+  "main": "dist/server.js",
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
-  "type": "module",
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsx watch src/server.ts --clear-screen=false"
+    "dev": "tsx watch src/server.ts --clear-screen=false",
+    "start": "node dist/server.js"
   },
   "dependencies": {
+    "@project/shared": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
-    "typeorm": "^0.3.21"
+    "pm2": "^6.0.5",
+    "typeorm": "^0.3.21",
+    "@faker-js/faker": "^9.7.0",
+    "typeorm-extension": "^3.7.1"
   },
   "devDependencies": {
-    "@project/shared": "workspace:^",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.14",
